objects/Queue_Details__c.object
<CustomObject>
    <description>This Object will be used for Queue Maintenance, and users can view who is part of the queue</description>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <description>Holds the Approval Level for the Queue</description>
        <label>Approval Level</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>LBU_Code__c</referenceTo>
        <relationshipLabel>Queue Details</relationshipLabel>
        <relationshipName>Queue_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country ISO Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EUC_GLO__c</fullName>
        <description>End User Country or Global</description>
        <label>EUC / GLO</label>
        <picklist>
            <picklistValues>
                <fullName>EUC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FES_HUB_OTHER__c</fullName>
        <label>FES/ HBU/ OTHER</label>
        <picklist>
            <picklistValues>
                <fullName>FES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HBU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mgmt_Head__c</fullName>
        <description>Head or Management classification</description>
        <label>Mgmt / Head</label>
        <picklist>
            <picklistValues>
                <fullName>Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mgmt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Queue Details</relationshipLabel>
        <relationshipName>Queue_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue_API_Name__c</fullName>
        <description>Holds the API name of the Queue for Custom logic usage in the future</description>
        <label>Queue API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>REG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Queue Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queue Details</pluralLabel>
    <recordTypes>
        <fullName>Campaign</fullName>
        <active>true</active>
        <label>Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Screening</fullName>
        <active>true</active>
        <label>Opportunity Screening</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>